# empirical-evidence

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  scratch_drive.py  scratch_flood3.py  scratch_forest_follow.py  scratch_forest_nav.py  scratch_forest_nav2.py  scratch_route_follow.py  scratch_route_follow2.py  scratch_route_follow3.py  scratch_walk.py  smoke_cuda.py
.claude/skills/brock-battle-learning/: SKILL.md
autotune/: __init__.py  benchmark.py  brock.py  brock_loop.py  config.py  convert_telemetry.py  eval_heldout.py  eval_proposer.py  experiment.py  forest_benchmark.py  forest_follow.py  forest_harvest.py  forest_loop.py  forest_story.py  game_profile.py  generate.py  genome.py  harvest.py  loop.py  march.py  merge_corpus.py  nudge_sft.py  nudge_steer.py  ollama_proposer.py  package.py  party.py  rollout.py  scenario.py  selection.py  speedrun.py  story.py  sweep.py  train_sft.py  verifier.py  weights_viz.py  winprob.py
autotune/routes/: forest_cross_path.json
data/sft/: corpus.jsonl  valid.jsonl
data/sft_v3/: README.md  stats.json  train.jsonl
docs/: brock-loop.md  brock-phase-b-findings.md  experiment-findings.md  game-agnostic-retrain.md  pokemon-kafka-integration.md  serving-forest-lora.md
docs/superpowers/plans/: 2026-07-01-lora-weight-viz.md  2026-07-02-domain-tagged-lora-benchmark.md  2026-07-05-telemetry-sft-converter.md
docs/superpowers/specs/: 2026-06-29-forest-follower-sft-bridge-design.md  2026-07-01-lora-weight-visualization-design.md  2026-07-05-telemetry-sft-converter-design.md
scripts/: apply_brock.sh  apply_genome.sh  capture_pre_brock.py  experiment.sh  loop.sh  serve_forest_lora.sh  setup_from_pk.sh
tests/: conftest.py  test_benchmark.py  test_brock.py  test_brock_loop.py  test_config.py  test_convert_telemetry.py  test_eval_heldout.py  test_eval_proposer.py  test_forest_benchmark.py  test_forest_story.py  test_game_profile.py  test_genome.py  test_harvest.py  test_merge_corpus.py  test_nudge_sft.py  test_nudge_steer.py  test_ollama_proposer.py  test_package.py  test_party.py  test_scenario.py  test_selection.py  test_speedrun.py  test_story.py  test_sweep.py  test_train_sft.py  test_verifier.py  test_weights_viz.py  test_winprob.py
tests/fixtures/convert/game/: 2026-06-28.jsonl  actions.jsonl  moves.jsonl  narrate.jsonl
tests/fixtures/convert/rollouts/scen-a/rollout-0/: fitness.json  genome.json
tests/fixtures/convert/rollouts/scen-a/rollout-1/: fitness.json  genome.json
tests/fixtures/convert/rollouts/scen-a/rollout-2/: fitness.json  genome.json
