[project]
name = "empirical-evidence"
version = "0.1.0"
description = "A local Try -> Check -> Reward -> Nudge loop (CUDA, with an optional MLX/Apple-Silicon backend) that enforces a story in the pokemon-kafka agent."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7",
    "transformers>=4.45",
    "peft>=0.13",
    "trl>=0.12",
    "accelerate>=1.0",
    "datasets>=3.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pyboy==2.7.0",
    "pillow>=12.2.0",
    "numpy>=2.1",
    "safetensors>=0.8",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# Apple-Silicon backend (AUTOTUNE_BACKEND=mlx). Not installable on Linux/CUDA;
# install with `uv sync --extra mac` on an M-series Mac.
mac = [
    "mlx-lm>=0.21",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autotune"]

# Blackwell (sm_120) needs PyTorch built for CUDA 12.8+. Pull torch from the cu128
# index; mirrors ../overdub's proven setup on this RTX 5090.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["autotune"]
omit = [
    # Subprocess / MLX / network wrappers are exercised by the smoke run, not unit tests.
    "autotune/rollout.py",
    "autotune/train_sft.py",
    "autotune/generate.py",
    "autotune/loop.py",
    "autotune/experiment.py",
    "autotune/march.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
